log/build_2021-03-21_16-00-47/p1/stdout_stderr.log
running egg_info
writing ../build/p1/p1.egg-info/PKG-INFO
writing dependency_links to ../build/p1/p1.egg-info/dependency_links.txt
writing entry points to ../build/p1/p1.egg-info/entry_points.txt
writing requirements to ../build/p1/p1.egg-info/requires.txt
writing top-level names to ../build/p1/p1.egg-info/top_level.txt
reading manifest file '../build/p1/p1.egg-info/SOURCES.txt'
writing manifest file '../build/p1/p1.egg-info/SOURCES.txt'
running build
running build_py
copying p1/controller.py -> /home/pdabrow1/dev_ws/src/dabrowski_synowiec/build/p1/build/lib/p1
running install
running install_lib
copying /home/pdabrow1/dev_ws/src/dabrowski_synowiec/build/p1/build/lib/p1/controller.py -> /home/pdabrow1/dev_ws/src/dabrowski_synowiec/install/p1/lib/python3.8/site-packages/p1
byte-compiling /home/pdabrow1/dev_ws/src/dabrowski_synowiec/install/p1/lib/python3.8/site-packages/p1/controller.py to controller.cpython-38.pyc
  File "/home/pdabrow1/dev_ws/src/dabrowski_synowiec/install/p1/lib/python3.8/site-packages/p1/controller.py", line 40
    if key == self.up
                    ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/pdabrow1/dev_ws/src/dabrowski_synowiec/install/p1/lib/python3.8/site-packages/p1-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../build/p1/p1.egg-info to /home/pdabrow1/dev_ws/src/dabrowski_synowiec/install/p1/lib/python3.8/site-packages/p1-0.0.0-py3.8.egg-info
running install_scripts
Installing controller script to /home/pdabrow1/dev_ws/src/dabrowski_synowiec/install/p1/lib/p1
writing list of installed files to '/home/pdabrow1/dev_ws/src/dabrowski_synowiec/build/p1/install.log'
